package com.ironhack.lms.domain.course;
public enum CourseStatus { DRAFT, PUBLISHED, ARCHIVED }
