package com.ironhack.lms.domain.enrollment;

public enum EnrollmentStatus { ACTIVE, CANCELLED, COMPLETED }
