package com.ironhack.lms.domain.user;

public enum Role { ADMIN, INSTRUCTOR, STUDENT }
